--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -7,11 +7,7 @@
         <div class="line-start">
           <label>Servicio de Salud Origen:</label>
           <div class="origin-establecimiento">
-            <select name="select">
-              <option value="value1">Value 1</option>
-              <option value="value2" selected>Establecimiento de Salud</option>
-              <option value="value3">Value 3</option>
-            </select>
+            <input type="text" disabled [value]="sourceEstablishment"/>
           </div>
         </div>
         <div class="line-start">
