--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -1,61 +1,7 @@
 <div class="referrals-container">
   <app-patient-info></app-patient-info>
-  <div class="info-container">
-    <section class="column-1">
-      <h4 class="title-section">Datos de Referencia</h4>
-      <form>
-        <div class="line-start">
-          <label>Establecimiento Origen:</label>
-          <div class="origin-establecimiento">
-            <select disabled>
-              <option selected [value]="sourceEstablishment.code">{{ sourceEstablishment.name }}</option>
-            </select>
-          </div>
-        </div>
-        <div class="line-start">
-          <label>Establecimiento Destino:</label>
-          <div class="origin-establecimiento">
-            <select name="destinyEstablishment" [(ngModel)]="referred.destinyEstablishmentCode" (change)="onDestinyEstablishmentChange()">
-              <option *ngFor="let destinyEstablishment of destinyEstablishments" [value]="destinyEstablishment.code">
-                {{ destinyEstablishment.name }}
-              </option>
-            </select>
-          </div>
-        </div>
-        <div class="line-start">
-          <label>Sevicio de Destino</label>
-          <div class="origin-establecimiento">
-            <select name="destinyService" [(ngModel)]="referred.destinyServiceCode" [disabled]="!referred.destinyEstablishmentCode">
-              <option *ngFor="let destinyService of destinyServices" [value]="destinyService.code">
-                {{ destinyService.destinyServiceName }}
-              </option>
-            </select>
-          </div>
-        </div>
-        <div class="line-start">
-          <label>Especialidad</label>
-          <div class="origin-establecimiento">
-            <select name="specialty" [(ngModel)]="referred.specialtyCode" [disabled]="!referred.destinyEstablishmentCode">
-              <option *ngFor="let specialty of specialties" [value]="specialty.code">
-                {{ specialty.specialtyName }}
-              </option>
-            </select>
-          </div>
-        </div>
-        <div class="row-line-below">
-          <label>Motivo de Referencia</label>
-          <div class="speciality">
-            <p id="reasonText">
-              El paciente cuenta con un {{ diagnosticService.response.maxOutput.value * 100 | number: "1.2-2" }} % de probabilidad de presentar un presunto
-              caso de {{ diagnosticService.disease.name }}, por ello es que se requiere su inmediata
-              transferencia a un centro de salud con mayor jerarquía para su
-              atención oportuna.
-            </p>
-          </div>
-        </div>
-      </form>
-    </section>
-    <section class="column-2">
+  <div class="main-container">
+    <div class="container-buttons">
       <div class="row-btns">
         <button (click)="toggleShowAnamnesis()" type="checkbox" class="buttons-anam">
           Anamnesis / Fisico
@@ -64,90 +10,156 @@
           Apoyo al Diagnostico
         </button>
       </div>
-      <div *ngIf="isShownAnamnesis" class="anamnesis-fisico">
-        <h4 class="title-section">Anamnesis</h4>
-        Resumen Anamnesis
-          <textarea rows="4">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
-        Examen Físico:
-        <form [formGroup]="formAnamnesis" errorTailor>
-          <div class="line">
-            <div class="elem">
-              <label class="lb-txt">Temp</label>
-              <input class="input-lb" type="number" name="temp" value="36*" formControlName="temperatura" />
+    </div>
+    <div class="container-forms">
+      <div class="info-container">
+        <section class="column-1">
+          <h4 class="title-section">Datos de Referencia</h4>
+          <form>
+            <div class="line-start">
+              <label>Establecimiento Origen:</label>
+              <div class="origin-establecimiento">
+                <select disabled>
+                  <option selected [value]="sourceEstablishment.code">{{ sourceEstablishment.name }}</option>
+                </select>
+              </div>
             </div>
-            <div class="elem">
-              <label class="lb-txt">P/A</label>
-              <input class="input-lb" type="text" name="pa" value=" " formControlName="pa" />
+            <div class="line-start">
+              <label>Establecimiento Destino:</label>
+              <div class="origin-establecimiento">
+                <select name="destinyEstablishment" [(ngModel)]="referred.destinyEstablishmentCode"
+                  (change)="onDestinyEstablishmentChange()">
+                  <option *ngFor="let destinyEstablishment of destinyEstablishments"
+                    [value]="destinyEstablishment.code">
+                    {{ destinyEstablishment.name }}
+                  </option>
+                </select>
+              </div>
+            </div>
+            <div class="line-start">
+              <label>Sevicio de Destino</label>
+              <div class="origin-establecimiento">
+                <select name="destinyService" [(ngModel)]="referred.destinyServiceCode"
+                  [disabled]="!referred.destinyEstablishmentCode">
+                  <option *ngFor="let destinyService of destinyServices" [value]="destinyService.code">
+                    {{ destinyService.destinyServiceName }}
+                  </option>
+                </select>
+              </div>
+            </div>
+            <div class="line-start">
+              <label>Especialidad</label>
+              <div class="origin-establecimiento">
+                <select name="specialty" [(ngModel)]="referred.specialtyCode"
+                  [disabled]="!referred.destinyEstablishmentCode">
+                  <option *ngFor="let specialty of specialties" [value]="specialty.code">
+                    {{ specialty.specialtyName }}
+                  </option>
+                </select>
+              </div>
+            </div>
+            <div class="row-line-below">
+              <label>Motivo de Referencia</label>
+              <div class="speciality">
+                <p id="reasonText">
+                  El paciente cuenta con un {{ diagnosticService.response.maxOutput.value * 100 | number: "1.2-2" }} %
+                  de
+                  probabilidad de presentar un presunto
+                  caso de {{ diagnosticService.disease.name }}, por ello es que se requiere su inmediata
+                  transferencia a un centro de salud con mayor jerarquía para su
+                  atención oportuna.
+                </p>
+              </div>
+            </div>
+          </form>
+        </section>
+        <section class="column-2">
+          <div *ngIf="isShownAnamnesis" class="anamnesis-fisico">
+            <h4 class="title-section">Anamnesis</h4>
+            Resumen Anamnesis
+            <textarea rows="4">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
+            Examen Físico:
+            <form [formGroup]="formAnamnesis" errorTailor>
+              <div class="line">
+                <div class="elem">
+                  <label class="lb-txt">Temp</label>
+                  <input class="input-lb" type="number" name="temp" value="36*" formControlName="temperatura" />
+                </div>
+                <div class="elem">
+                  <label class="lb-txt">P/A</label>
+                  <input class="input-lb" type="text" name="pa" value=" " formControlName="pa" />
+                </div>
+              </div>
+              <div class="line">
+                <div class="elem">
+                  <label class="lb-txt">FC</label>
+                  <input class="input-lb" type="text" name="FC" value="" formControlName="fc" />
+                </div>
+                <div class="elem">
+                  <label class="lb-txt">FR</label>
+                  <input class="input-lb" type="text" name="FR" value="" formControlName="fr" />
+                </div>
+              </div>
+              <div class="line">
+                <div class="elem">
+                  <label class="lb-txt">Peso</label>
+                  <input class="input-lb" type="text" name="weight" value="" formControlName="peso" />
+                </div>
+                <div class="elem">
+                  <label class="lb-txt">Altura</label>
+                  <input class="input-lb" type="text" name="height" value="" formControlName="altura" />
+                </div>
+              </div>
+            </form>
+            Resumen Examen Físico
+
+            <textarea rows="2">Hinchazón de las piernas</textarea>
+          </div>
+          <div *ngIf="isShownDiagnostic" class="diagnostic-help">
+            <div class="t-container">
+              <div class="section-header">
+                <h4 class="title-section">Procedimiento</h4>
+                <button (click)="addProcedimiento()">Añadir</button>
+              </div>
+              <div class="container-table">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z5">
+                  <ng-container matColumnDef="code">
+                    <th mat-header-cell *matHeaderCellDef>Code</th>
+                    <td mat-cell *matCellDef="let element">{{ element.code }}</td>
+                  </ng-container>
+                  <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef>Description</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.description }}
+                    </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                </table>
+              </div>
+            </div>
+            <br />
+            <br />
+            <div class="t-container">
+              <div class="section-header">
+                <h4 class="title-section">Examen de Laboratorio</h4>
+                <button>Añadir</button>
+              </div>
+              <table mat-table [dataSource]="dataSource1" class="mat-elevation-z5">
+                <ng-container matColumnDef="description">
+                  <th mat-header-cell *matHeaderCellDef>Description</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.description }}
+                  </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
+              </table>
             </div>
           </div>
-          <div class="line">
-            <div class="elem">
-              <label class="lb-txt">FC</label>
-              <input class="input-lb" type="text" name="FC" value="" formControlName="fc" />
-            </div>
-            <div class="elem">
-              <label class="lb-txt">FR</label>
-              <input class="input-lb" type="text" name="FR" value="" formControlName="fr" />
-            </div>
-          </div>
-          <div class="line">
-            <div class="elem">
-              <label class="lb-txt">Peso</label>
-              <input class="input-lb" type="text" name="weight" value="" formControlName="peso" />
-            </div>
-            <div class="elem">
-              <label class="lb-txt">Altura</label>
-              <input class="input-lb" type="text" name="height" value="" formControlName="altura" />
-            </div>
-          </div>
-        </form>
-        Resumen Examen Físico
-        
-        <textarea rows="2">Hinchazón de las piernas</textarea>
+        </section>
       </div>
-      <div *ngIf="isShownDiagnostic" class="diagnostic-help">
-        <div class="t-container">
-          <div class="section-header">
-            <h4 class="title-section">Procedimiento</h4>
-            <button (click)="addProcedimiento()">Añadir</button>
-          </div>
-          <div class="container-table">
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z5">
-              <ng-container matColumnDef="code">
-                <th mat-header-cell *matHeaderCellDef>Code</th>
-                <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-              </ng-container>
-              <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef>Description</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.description }}
-                </td>
-              </ng-container>
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </div>
-        </div>
-        <br />
-        <br />
-        <div class="t-container">
-          <div class="section-header">
-            <h4 class="title-section">Examen de Laboratorio</h4>
-            <button>Añadir</button>
-          </div>
-          <table mat-table [dataSource]="dataSource1" class="mat-elevation-z5">
-            <ng-container matColumnDef="description">
-              <th mat-header-cell *matHeaderCellDef>Description</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.description }}
-              </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
-          </table>
-        </div>
-      </div>
-    </section>
+    </div>
   </div>
   <div class="botones">
     <button type="submit" class="btn btn-regresar" (click)="onBack()">
