--- a/src/app/components/referred-details/referred-details.component.css
+++ b/src/app/components/referred-details/referred-details.component.css
@@ -23,19 +23,32 @@ body {
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
-    background-color: #BDF8F5;
-    margin: 5px 7% 5px 7%;
-    padding: 15px 25px;
+    background-color: #bdf8f5;
+    margin: 30px 7%;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 200px;
     box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5)
 }
+
 
 .title-section{
     font-weight: bold;
     color: #04578B;
+}
+.row-btns{
+    width: 50vh;
+}
+.buttons-anam{
+    border: none;
+    padding: 1vh;
+    border-radius: 1vh;
+}
+.buttons-anam:hover{
+    background-color: #04578B;
+    color: white;
+    border-radius: 1vh;
 }
 
 .first-row{
@@ -86,8 +99,17 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex: wrap;
-    margin: 10px 7%;
+    margin: 0 10vh;
+}
+.info-container section{
+    height:80vh;
+}
+.container-buttons{
+    margin-right: 10vh;
+    margin-left: 120vh;
+}
+.main-container{
+    margin-top: 5vh;
 }
 
 form{
@@ -97,9 +119,6 @@ form{
     height: 90%;
 }
 
-label{
-    font-size: 17px;
-}
 
 .column-1{
     width: 50%;
@@ -123,7 +142,7 @@ label{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 95%;
+    height: 100%;
     border-color: gray;
     border-width: 2px;
     border-radius: 10px;
@@ -174,11 +193,13 @@ label{
 table {
     width: 100%;
 }
+label{
+    font-size: 17px;
+}
+
 
 .line-start{
     display: flex;
-    justify-content: flex-start;
-    width: 60%;
     justify-content: space-between;
 }
 
@@ -204,7 +225,7 @@ footer{
 }
 
 select{
-    width: 250px;
+    width: 300px;
     text-align: start;
     display: flex;
     justify-content: center;
@@ -212,13 +233,14 @@ select{
 }
 
 .elem{
-    width: 30%;
-    display: flex;
     justify-content: space-around;
 }
 
 input[type=time]{
     width: 40%;
+}
+.input-lb{
+    width: 15vh;
 }
 
 input[type=date]{
@@ -232,19 +254,32 @@ input[type=date]{
 #FC, #FR, #temp{
     width: 80px;
 }
-
-.btn-send{
-    background-color: #04578B; 
-    border: none;
-    color: #A8F5F2;
-    padding: 15px 30px;
+.lb-txt{
+    width: 10vh;
+}
+.btn{
+    border:none;
+    color: #ffffff;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
+    border-radius: initial;
 }
-
+.botones{
+    width: 50vh;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    align-self: end;
+    margin-right: 8vh;
+}
+.btn-regresar{
+    background-color: #946675; 
+}
 .section-header{
     display: flex;
     justify-content: space-between;
