--- a/src/app/components/dialog-process/dialog-process.component.html
+++ b/src/app/components/dialog-process/dialog-process.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
     <div class="elemnts-search">
         <section class="left-elements">
             <mat-form-field appearance="standard">
@@ -18,19 +18,19 @@
     <div class="table-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     
-            <!-- Position Column -->
+            
             <ng-container matColumnDef="Código">
                 <th mat-header-cell *matHeaderCellDef> Código </th>
                 <td mat-cell *matCellDef="let element"> {{element.code}} </td>
             </ng-container>
         
-            <!-- Name Column -->
+            
             <ng-container matColumnDef="Descrpción">
                 <th mat-header-cell *matHeaderCellDef> descripción</th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
         
-            <!-- Symbol Column -->
+            
             <ng-container matColumnDef="Acciones">
                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
                 <td mat-cell *matCellDef="let element"> 
@@ -41,7 +41,7 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         
-            <!-- Row shown when there is no matching data. -->
+            
             <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
             </tr>
@@ -51,5 +51,5 @@
         <button mat-button mat-dialog-close>Cancelar</button>
         <button mat-button>Agregar</button>
     </mat-dialog-actions>
-</body>
+</body> -->
 
