--- a/src/app/components/incidence-admin/incidence-admin.component.html
+++ b/src/app/components/incidence-admin/incidence-admin.component.html
@@ -1,56 +1,1 @@
-
-<body>
-        <section class="left-elements">
-            <mat-form-field appearance="standard">  
-                <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
-            </mat-form-field>
-            <i class="bi bi-search"></i>
-        </section>
-    <div class="table-content">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-            <!-- Position Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let element"> {{element.id}}</td>
-            </ng-container>
-        
-            <!-- Name Column -->
-            <ng-container matColumnDef="docMedic">
-                <th mat-header-cell *matHeaderCellDef> Doc. Médico </th>
-                <td mat-cell *matCellDef="let element"> {{element.docMedic}} </td>
-            </ng-container>
-        
-            <!-- Weight Column -->
-            <ng-container matColumnDef="type">
-                <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                <td mat-cell *matCellDef="let element"> {{element.type}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef> Estado </th>
-                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-            </ng-container>
-        
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="details">
-                <th mat-header-cell *matHeaderCellDef> Detalles </th>
-                <td mat-cell *matCellDef="let element"> 
-                    <button type="button" class="btn-view" (click)="onView(element.id)">Ver</button>
-                </td>
-            </ng-container>
-        
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-            </tr>
-        </table>
-    </div>
-    <div class="container-newIndicence">
-        <button type="submit" class="btn-incidence" (click)="createIncidence()">Crear Nuevo</button>
-    </div>
-
-</body>
+<p>Tabla de incidencias</p>
