--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -1,5 +1,5 @@
 <div class="referrals-container">
-  <app-patient-info></app-patient-info>
+  <app-patient-info [readMode]="true"></app-patient-info>
   <div class="main-container">
     <div class="container-buttons">
       <div class="row-btns">
@@ -77,37 +77,37 @@
           <div *ngIf="isShownAnamnesis" class="anamnesis-fisico">
             <h4 class="title-section">Anamnesis</h4>
             Resumen Anamnesis
-            <textarea rows="4">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
             Examen Físico:
+            <textarea name="anamnesis" [(ngModel)]="history.anamnesis" rows="4">
             <form [formGroup]="formAnamnesis" errorTailor>
               <div class="line">
                 <div class="elem">
                   <label class="lb-txt">Temp</label>
-                  <input class="input-lb" type="number" name="temp" value="36*" formControlName="temperatura" />
+                  <input class="input-lb" type="number" name="temperature" formControlName="temperatura" [(ngModel)]="history.temperature" />
                 </div>
                 <div class="elem">
                   <label class="lb-txt">P/A</label>
-                  <input class="input-lb" type="text" name="pa" value=" " formControlName="pa" />
+                  <input class="input-lb" type="text" name="pressure" value=" " formControlName="pa" [(ngModel)]="history.pressure" />
                 </div>
               </div>
               <div class="line">
                 <div class="elem">
                   <label class="lb-txt">FC</label>
-                  <input class="input-lb" type="text" name="FC" value="" formControlName="fc" />
+                  <input class="input-lb" type="text" name="fc" value="" formControlName="fc" [(ngModel)]="history.respirationRate" />
                 </div>
                 <div class="elem">
                   <label class="lb-txt">FR</label>
-                  <input class="input-lb" type="text" name="FR" value="" formControlName="fr" />
+                  <input class="input-lb" type="text" name="fr" value="" formControlName="fr" [(ngModel)]="history.heartRate" />
                 </div>
               </div>
               <div class="line">
                 <div class="elem">
                   <label class="lb-txt">Peso</label>
-                  <input class="input-lb" type="text" name="weight" value="" formControlName="peso" />
+                  <input class="input-lb" type="text" name="weight" value="" formControlName="peso" [(ngModel)]="history.weight" />
                 </div>
                 <div class="elem">
                   <label class="lb-txt">Altura</label>
-                  <input class="input-lb" type="text" name="height" value="" formControlName="altura" />
+                  <input class="input-lb" type="text" name="height" value="" formControlName="altura" [(ngModel)]="history.height" />
                 </div>
               </div>
             </form>
@@ -122,20 +122,7 @@
                 <button (click)="addProcedimiento()">Añadir</button>
               </div>
               <div class="container-table">
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z5">
-                  <ng-container matColumnDef="code">
-                    <th mat-header-cell *matHeaderCellDef>Code</th>
-                    <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-                  </ng-container>
-                  <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef>Description</th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.description }}
-                    </td>
-                  </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                </table>
+                <!-- Tabla -->
               </div>
             </div>
             <br />
@@ -145,16 +132,7 @@
                 <h4 class="title-section">Examen de Laboratorio</h4>
                 <button>Añadir</button>
               </div>
-              <table mat-table [dataSource]="dataSource1" class="mat-elevation-z5">
-                <ng-container matColumnDef="description">
-                  <th mat-header-cell *matHeaderCellDef>Description</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.description }}
-                  </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
-              </table>
+              <!--Tabla -->
             </div>
           </div>
         </section>
