--- a/src/app/components/referred-details/referred-details.component.html
+++ b/src/app/components/referred-details/referred-details.component.html
@@ -156,7 +156,7 @@
                           <button>Añadir</button>
                         </div>
                         <div class="container-table">
-                          <table mat-table [dataSource]="dataSource" class="mat-elevation-z5">
+                          <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z5">
                             <ng-container matColumnDef="code">
                               <th mat-header-cell *matHeaderCellDef>Code</th>
                               <td mat-cell *matCellDef="let element">{{ element.code }}</td>
@@ -169,7 +169,7 @@
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                          </table>
+                          </table> -->
                         </div>
                       </div>
                       <br />
@@ -179,7 +179,7 @@
                           <h4 class="title-section">Examen de Laboratorio</h4>
                           <button>Añadir</button>
                         </div>
-                        <table mat-table [dataSource]="dataSource1" class="mat-elevation-z5">
+                        <!-- <table mat-table [dataSource]="dataSource1" class="mat-elevation-z5">
                           <ng-container matColumnDef="description">
                             <th mat-header-cell *matHeaderCellDef>Description</th>
                             <td mat-cell *matCellDef="let element">
@@ -188,7 +188,7 @@
                           </ng-container>
                           <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
                           <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
-                        </table>
+                        </table> -->
                       </div>
                     </div>
                   </section>
