--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-.control-error{
-    color:red;
+body {
+    font-family: 'Roboto', sans-serif;
 }
