arreglado diseño de resultado de diagnostico. Cuadradas tablas de referencia y anamnesis

--- a/src/app/components/dialog-no-reference/dialog-no-reference.component.css
+++ b/src/app/components/dialog-no-reference/dialog-no-reference.component.css
@@ -1,5 +1,5 @@
 .body{
-    width: 50%;
+    width: 80%;
     height: 50%;
 }
 
@@ -33,5 +33,7 @@
 
 .area-button{
     justify-content: space-around;
+    display: flex;
+    flex-direction: row;
 }
 
