--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@
 .control-error{
     color:red;
 }
+.makeItMiddle{
+    transform: translate(-50%, -50%);
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
