--- a/src/app/components/dialog-process/dialog-process.component.html
+++ b/src/app/components/dialog-process/dialog-process.component.html
@@ -34,7 +34,7 @@
             <ng-container matColumnDef="Acciones">
                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <button type="button" class="btn-view" mat-dialog-close="{{element.ocde}}" (click)="onView(element.idIncidence)">Agregar</button>
+                    <button mat-stroked-button mat-dialog-close="{{element.ocde}}" (click)="onView(element.idIncidence)">Agregar</button>
                 </td>
             </ng-container>
         
