--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="container-forms">
-      <div class="info-container">
+      <form [formGroup]="formAnamnesis" class="info-container">
         <section class="column-1">
           <h4 class="title-section">Datos de Referencia</h4>
           <div class="datos-referencia">
@@ -79,7 +79,7 @@
             Resumen Anamnesis
             <textarea rows="4">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
             Examen Físico:
-            <form [formGroup]="formAnamnesis" errorTailor>
+            <div class="anamnesis-form" errorTailor>
               <div class="line">
                 <div class="elem">
                   <label class="lb-txt">Temp</label>
@@ -110,7 +110,7 @@
                   <input class="input-lb" type="text" name="height" value="" formControlName="altura" />
                 </div>
               </div>
-            </form>
+            </div>
             Resumen Examen Físico
 
             <textarea rows="2">Hinchazón de las piernas</textarea>
@@ -158,7 +158,7 @@
             </div>
           </div>
         </section>
-      </div>
+      </form>
     </div>
   </div>
   <div class="botones">
