--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,8 +6,14 @@
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarColor01">
       <ul class="navbar-nav">
-        <li *ngIf="isAdmin" class="nav-item">
-          <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Registro</a>
+        <li ngbDropdown class="nav-item dropdown">
+          <a *ngIf="isAdmin" ngbDropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Registro
+          </a>
+          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" routerLink="/dashboard">Médicos</a>
+            <a class="dropdown-item" routerLink="/crearPaciente" >Pacientes</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/diagnostico" routerLinkActive="active">Diagnostico</a>
